--- a/Описание дерева_Товар.md
+++ b/Описание дерева_Товар.md
@@ -3,7 +3,7 @@
 **Интерфейс _Товар_:**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Цена | Цена
 Время | Срок годности
 Дата | Дата изготовления
@@ -14,7 +14,7 @@
 **Абстрактрый класс _Пища_ (наследник интефейса "Товар"):**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Число | Калорийность
 Список ингридиентов | Состав
 Температура | Надлежащая температура сохранения
@@ -23,7 +23,7 @@
 **Абстрактрый класс _Химия_ (Наследник интерфесов "Товар" и "Товар со скидкой"):**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Строка | Действующее вещество
 Булевое | Наличие галогенов
 Булевое | Применимо для малишей
@@ -31,7 +31,7 @@
 **Абстрактрый класс _Одежда_ (наследник интефейса "Товар"):**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Пол | Пол
 Перечсиление | Размер
 Перечисление | Тип изготовления
@@ -44,7 +44,7 @@
 **Абстрактрый класс _Посуда_ (наследник интефейса "Товар"):**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Список материалов | Основной материал
 Перечисление | Тип покрытия (при наличии)
 Масса | Масса на внутренний обьем
@@ -61,7 +61,7 @@
 **Абстрактный класс _Молочное_ (Наследник абстр. класса "Пища", Наследник интерфейса "Готово на обед"):**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Список молока от разных животных | Тип молока
 Число | Массовая доля молочного жира в продукте
 
@@ -77,7 +77,7 @@
 **Абстрактный класс _Крупа_ (Наследник абстр. класса "Пища"):**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Число | Степень очищения(%)
 Перечисление | Тип (Целое, дробленое, молотое)
 
@@ -85,12 +85,13 @@
 **Абстрактный класс _Выпечка_ (Наследник абстр. класса "Пища", Наследник интерфейса "Готово на обед"):**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Список поднимающих веществ | Поднимающее вещество (при наличии)
 Булевое | Наличие начинки
 Строка | Тип муки
 
 **Абстрактный класс _Добавки_ (Наследник абстр. класса "Пища"):**
+
 Тип данных | Свойство
 ---------- |---------
 Строка | Агрегатное состояние
@@ -99,7 +100,7 @@
 **Абстрактный класс _Средство для очистки материалов_ (Наследник интерфейса "Химия"):**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Булевое | Разьедает кожу человека
 Температура | Максимально эфективная температура для использования
 
@@ -107,7 +108,7 @@
 **Абстрактный класс _Средство личной гигиены_ (Наследник абстр. класса "Химия"):**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Пол | Пол
 Булевое | На натуральной основе
 Булевое | Приносит вред или пользу здоровью
@@ -116,7 +117,7 @@
 **Абстрактный класс _Обувь (Наследник абстр. класса "Одежда"):**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Число | Высота голенищща/на длинну стельки
 Список материалов | Материал подошвы
 Длинна | Высота подошвы
@@ -125,7 +126,7 @@
 **Абстрактный класс _Головной убор (Наследник абстр. класса "Одежда"):**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Длинна | Ширина козырька или полей (при наличии)
 Булевое | Наличие ушей
 Булевое | Наличие завязок на подбородке
@@ -133,7 +134,7 @@
 **Абстрактный класс _Одежда на плечи (Наследник Наследник абстр. класса "Одежда"):**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Длинна | Длинна рукова/среднюю длинну руки (при наличии)
 Длинна | Длинна изделия/средний рост человека
 Перечисление | Тип горловины
@@ -142,14 +143,14 @@
 **Абстрактный класс _Одежда на ноги (Наследник Наследник абстр. класса "Одежда"):**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Длинна | Длинна изделия/ высота человека от пояса до пола
 
 
 **Класс _Колбаса (Наследник абстр. класса "Мясное", Наследник интерфейса "Готово на обед")_:**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Перечисление | Тип
 
 **Класс _Соленая рыба (Наследник абстр. класса "Мясное", итерфейса "Готово на обед", интерфейса "Товар на развес")_:**
@@ -162,7 +163,7 @@
 **Класс _Мороженое_ (Наследник абстр. класса "Молочное")_:**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Перечисление | Тип
 Перечисление | Натуральные добавки (при наличии)
 
@@ -170,7 +171,7 @@
 **Класс _Цитрусовое_ (Наследник абстр. класса "Овощ-фрукт", интерфейса "Готово на обед", интерфейса "Товар на развес")_:**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Булевое | Наличие косточки
 Перечисление | Толстошкурый-тонкошкурый
 Булевое | Чистый вид-смесь
@@ -185,7 +186,7 @@
 **Класс _Пирожок_ (Наследник абстр. класса "Выпечка")_:**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Перечисление | Тип начинки
 Булевое | Открытый пирожок
 Перечисление | Тип приготовления
@@ -193,7 +194,7 @@
 **Класс _Какао_ (Наследник абстр. класса "Добавки")_:**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Число | Массовая доля какао-масла
 Число | Массовая доля какао-порошка
 
@@ -201,70 +202,74 @@
 **Класс _Стиральный порошок_ (Наследник абстр. класса "Средство для очистки материалов")_:**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Число | Расход (масса порошка на 1 л воды)
 
 **Класс _Дедезерант_ (Наследник абстр. класса "Средство личной гигиены")_:**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Булевое | Наличие дезинфицирующего вещества
 Перечесление | Тип (жидкий, двердый, другой)
 
 **Класс _Сапоги_ (Наследник абстр. класса "Обувь")_:**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 
 **Класс _Шапка_ (Наследник абстр. класса "Головной убор")_:**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 
 **Класс _Шуба_ (Наследник абстр. класса "Одежда на плечи")_:**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 
 **Класс _Юбка_ (Наследник абстр. класса "Одежда на ноги")_:**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 
 **Класс _Кастрюля_ (Наследник абстр. класса "Посуда для готовка", наследник интерфейса "Товар со скидкой")_:**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 
 **Класс _Чашка_ (Наследник абстр. класса "Посуда для обеда")_:**
 
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Перечисление | Тип 
 
 
 
 **Дополнительынй Интерфейс _Товар со скидкой_:**
+
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Время | Срок действия скидки
 Дата | Дата начала скидки
 Число | Процентная доля скидки от общей цены
 
 
 **Дополнительынй Интерфейс _Готово на обед_:**
+
 Тип данных | Свойство
----------- |---------
+---------- | --------
 Цена | Разница в цене между готовым товаром и приготовленным самостоятельно из купленых ингридиентов
 
 
-**Дополнительынй Интерфейс _Кожаные изделия_:**
+**Дополнительынй Интерфейс _Кожаное изделие_:**
+
 Тип данных | Свойство
 ---------- |---------
 Перечисление | Тип кожи
 Булевое | Наличие меха на коже
 
 **Дополнительынй Интерфейс _Товар на развес_:**
+
 Тип данных | Свойство
 ---------- |---------
 
