--- a/Описание дерева_Товар.md
+++ b/Описание дерева_Товар.md
@@ -355,7 +355,7 @@
 
 **Объект _Сапоги1 (наследник класса "Сапоги", интерфейса "Кожаные изделия")_:**
 
-**Объект _Шуба1 (наследник класса "шуба", интерфейса "Кожаные изделия")_:**
+**Объект _Шуба1 (наследник класса "Шуба", интерфейса "Кожаные изделия")_:**
 
 **Объект _Кастрюля1 (наследник класса "Кастрюля")_:**
 
