--- a/Описание дерева_Товар.md
+++ b/Описание дерева_Товар.md
@@ -251,7 +251,7 @@
 ---------- | --------
 Время | Срок действия скидки
 Дата | Дата начала скидки
-Число | Процентная доля скидки от общей цены
+Число | Процентная доля скидки от первоначальной цены
 
 
 **Дополнительынй Интерфейс _Готово на обед_:**
@@ -305,9 +305,12 @@
 Свинина, говядина | Тип мяса
 30% | Массовая доля жира в продукте
 Копченая | Тип
+7 дней | Срок действия скидки
+20.02.2018 | Дата начала скидки
+5% | Процентная доля скидки от превоначальной цены
+?? | Разница в цене между готовым товаром и приготовленным самостоятельно из купленых ингридиентов
 
-
-**Объект _Селедь (наследник класса "Колбаса", интерфейса "Готово на обед")_:**
+**Объект _Селедь1 (наследник класса "Колбаса", интерфейса "Готово на обед")_:**
 
 Тип данных | Свойство
 ---------- |---------
@@ -323,6 +326,7 @@
 Да | Наличие консервантов
 9% | Массовая доля соли 
 Да | Наличие несьедобных внутренностей
+10 грн/кг | Разница в цене между готовым товаром и приготовленным самостоятельно из купленых ингридиентов
 
 **Объект _Каштан1 (наследник класса "Молочное")_:**
 
@@ -336,10 +340,13 @@
 1 | Марка (при наличии)
 2070 ккал/кг | Калорийность
 Молоко коровье, сливочное масло, какао порошок, орех грецкий, сахар, молоко сгущенное, вода питьевая, молоко сухое, эмульгатор, стабилизаторы, ванилин | Состав
+-5*С | Надлежащая температура сохранения
+Да | Наличие консервантов
 Коровье | Тип молока
 14% | Массовая доля молочного жира в продукте
 На палочке | тип
 Какао, орехи | Натуральные добавки (при наличии)
+?? | Разница в цене между готовым товаром и приготовленным самостоятельно из купленых ингридиентов
 
 **Объект _Лимон1 (наследник класса "Цитрусовое")_:**
 
