--- a/Описание дерева_Товар.md
+++ b/Описание дерева_Товар.md
@@ -123,7 +123,7 @@
 Длинна | Высота подошвы
 
 
-**Абстрактный класс _Головной убор (Наследник абстр. класса "Одежда"):**
+**Абстрактный класс _Головной убор_ (Наследник абстр. класса "Одежда"):**
 
 Тип данных | Свойство
 ---------- | --------
@@ -131,7 +131,7 @@
 Булевое | Наличие ушей
 Булевое | Наличие завязок на подбородке
 
-**Абстрактный класс _Одежда на плечи (Наследник Наследник абстр. класса "Одежда"):**
+**Абстрактный класс _Одежда на плечи_ (Наследник Наследник абстр. класса "Одежда"):**
 
 Тип данных | Свойство
 ---------- | --------
@@ -140,27 +140,27 @@
 Перечисление | Тип горловины
 Булевое | Наличие капюшона
 
-**Абстрактный класс _Одежда на ноги (Наследник Наследник абстр. класса "Одежда"):**
+**Абстрактный класс _Одежда на ноги_ (Наследник Наследник абстр. класса "Одежда"):**
 
 Тип данных | Свойство
 ---------- | --------
 Длинна | Длинна изделия/ высота человека от пояса до пола
 
 
-**Класс _Колбаса (Наследник абстр. класса "Мясное", Наследник интерфейса "Готово на обед")_:**
+**Класс _Колбаса_ (Наследник абстр. класса "Мясное", интерфейса "Готово на обед"):**
 
 Тип данных | Свойство
 ---------- | --------
 Перечисление | Тип
 
-**Класс _Соленая рыба (Наследник абстр. класса "Мясное", итерфейса "Готово на обед", интерфейса "Товар на развес")_:**
+**Класс _Соленая рыба_ (Наследник абстр. класса "Мясное", итерфейса "Готово на обед", интерфейса "Товар на развес"):**
 
 Тип данных | Свойство
 ---------- |---------
 Число | Массовая доля соли 
 Булевое | Наличие несьедобных внутренностей
 
-**Класс _Мороженое_ (Наследник абстр. класса "Молочное")_:**
+**Класс _Мороженое_ (Наследник абстр. класса "Молочное"):**
 
 Тип данных | Свойство
 ---------- | --------
@@ -168,7 +168,7 @@
 Перечисление | Натуральные добавки (при наличии)
 
 
-**Класс _Цитрусовое_ (Наследник абстр. класса "Овощ-фрукт", интерфейса "Готово на обед", интерфейса "Товар на развес")_:**
+**Класс _Цитрусовое_ (Наследник абстр. класса "Овощ-фрукт", интерфейса "Готово на обед", интерфейса "Товар на развес"):**
 
 Тип данных | Свойство
 ---------- | --------
@@ -176,14 +176,14 @@
 Перечисление | Толстошкурый-тонкошкурый
 Булевое | Чистый вид-смесь
 
-**Класс _Горох_ (Наследник абстр. класса "Крупа")_:**
+**Класс _Горох_ (Наследник абстр. класса "Крупа"):**
 
 Тип данных | Свойство
 ---------- |---------
 Булевое | Спелый-молодой
 Булевое | Наличие стрючков
 
-**Класс _Пирожок_ (Наследник абстр. класса "Выпечка")_:**
+**Класс _Пирожок_ (Наследник абстр. класса "Выпечка"):**
 
 Тип данных | Свойство
 ---------- | --------
@@ -191,7 +191,7 @@
 Булевое | Открытый пирожок
 Перечисление | Тип приготовления
 
-**Класс _Какао_ (Наследник абстр. класса "Добавки")_:**
+**Класс _Какао_ (Наследник абстр. класса "Добавки"):**
 
 Тип данных | Свойство
 ---------- | --------
@@ -199,35 +199,35 @@
 Число | Массовая доля какао-порошка
 
 
-**Класс _Стиральный порошок_ (Наследник абстр. класса "Средство для очистки материалов")_:**
+**Класс _Стиральный порошок_ (Наследник абстр. класса "Средство для очистки материалов"):**
 
 Тип данных | Свойство
 ---------- | --------
 Число | Расход (масса порошка на 1 л воды)
 
-**Класс _Дедезерант_ (Наследник абстр. класса "Средство личной гигиены")_:**
+**Класс _Дедезерант_ (Наследник абстр. класса "Средство личной гигиены"):**
 
 Тип данных | Свойство
 ---------- | --------
 Булевое | Наличие дезинфицирующего вещества
 Перечесление | Тип (жидкий, двердый, другой)
 
-**Класс _Сапоги_ (Наследник абстр. класса "Обувь")_:**
+**Класс _Сапоги_ (Наследник абстр. класса "Обувь"):**
 
 Тип данных | Свойство
 ---------- | --------
 
-**Класс _Шапка_ (Наследник абстр. класса "Головной убор")_:**
+**Класс _Шапка_ (Наследник абстр. класса "Головной убор"):**
 
 Тип данных | Свойство
 ---------- | --------
 
-**Класс _Шуба_ (Наследник абстр. класса "Одежда на плечи")_:**
+**Класс _Шуба_ (Наследник абстр. класса "Одежда на плечи"):**
 
 Тип данных | Свойство
 ---------- | --------
 
-**Класс _Юбка_ (Наследник абстр. класса "Одежда на ноги")_:**
+**Класс _Юбка_ (Наследник абстр. класса "Одежда на ноги"):**
 
 Тип данных | Свойство
 ---------- | --------
@@ -237,7 +237,7 @@
 Тип данных | Свойство
 ---------- | --------
 
-**Класс _Чашка_ (Наследник абстр. класса "Посуда для обеда")_:**
+**Класс _Чашка_ (Наследник абстр. класса "Посуда для обеда"):**
 
 Тип данных | Свойство
 ---------- | --------
@@ -288,7 +288,7 @@
 Метод взвесить должен определять массу товара положенного в корзину.
 
 
-**Объект _Колбаса1 (наследник класса "Колбаса", интерфейса "Товар со скидкой", интерфейса "Готово на обед")_:**
+**Объект _Колбаса1_ (наследник класса "Колбаса", интерфейса "Товар со скидкой", интерфейса "Готово на обед"):**
 
 Тип данных | Свойство
 ---------- |---------
@@ -310,7 +310,7 @@
 5% | Процентная доля скидки от превоначальной цены
 ?? | Разница в цене между готовым товаром и приготовленным самостоятельно из купленых ингридиентов
 
-**Объект _Селедь1 (наследник класса "Колбаса", интерфейса "Готово на обед")_:**
+**Объект _Селедь1_ (наследник класса "Соленая рыба", интерфейса "Готово на обед"):**
 
 Тип данных | Свойство
 ---------- |---------
@@ -328,7 +328,7 @@
 Да | Наличие несьедобных внутренностей
 10 грн/кг | Разница в цене между готовым товаром и приготовленным самостоятельно из купленых ингридиентов
 
-**Объект _Каштан1 (наследник класса "Молочное")_:**
+**Объект _Каштан1_ (наследник класса "Молочное"):**
 
 Тип данных | Свойство
 ---------- |---------
