--- a/Описание дерева_Товар.md
+++ b/Описание дерева_Товар.md
@@ -1,4 +1,5 @@
-﻿
+
+![Диаграмма дерева Товар](https://user-images.githubusercontent.com/36535012/36539173-8fb81298-17de-11e8-9dad-e48f427e0ea0.png)
 
 **Интерфейс _Товар_:**
 
