--- a/Описание дерева_Товар.md
+++ b/Описание дерева_Товар.md
@@ -1,68 +1,69 @@
 
-![Диаграмма дерева Товар](https://user-images.githubusercontent.com/36535012/36539173-8fb81298-17de-11e8-9dad-e48f427e0ea0.png)
+![Диаграмма к дереву](https://user-images.githubusercontent.com/36535012/36641584-822526f8-1a3a-11e8-940c-cfabb6808939.png)
 
 **Интерфейс _Товар_:**
 
 Тип данных | Свойство
----------- | --------
+---------- |---------
 Цена | Цена
 Время | Срок годности
 Дата | Дата изготовления
 Страна | Страна производства
 Строка | Условия возврата
-Перечисление | Марка (при наличии)
+Список марок | Марка (при наличии)
 
 **Абстрактрый класс _Пища_ (наследник интефейса "Товар"):**
 
 Тип данных | Свойство
----------- | --------
+---------- |---------
 Число | Калорийность
 Список ингридиентов | Состав
 Температура | Надлежащая температура сохранения
 Булевое | Наличие консервантов
 
-**Абстрактрый класс _Химия_ (Наследник интерфесов "Товар" и "Товар со скидкой"):**
+**Абстрактрый класс _Химия_ (Наследник интерфеса "Товар"):**
 
 Тип данных | Свойство
----------- | --------
+---------- |---------
 Строка | Действующее вещество
 Булевое | Наличие галогенов
-Булевое | Применимо для малишей
 
 **Абстрактрый класс _Одежда_ (наследник интефейса "Товар"):**
 
 Тип данных | Свойство
----------- | --------
-Пол | Пол
-Перечсиление | Размер
-Перечисление | Тип изготовления
-Сезон | Сезон
+---------- |---------
+Перечисление | Пол
+Размер | Размер
+Перечисление | Сезон
 Список материалов | Материал верха
 Булевое | Наличие подклада
 Список материалов | Материал подклада (при наличии)
-Перечисление | Застежка (при наличии)
+Список застежек | Застежка (при наличии)
 
 **Абстрактрый класс _Посуда_ (наследник интефейса "Товар"):**
 
 Тип данных | Свойство
----------- | --------
+---------- |---------
 Список материалов | Основной материал
-Перечисление | Тип покрытия (при наличии)
+Строка | Тип покрытия (при наличии)
 Масса | Масса на внутренний обьем
-Строка | Повреждается от удара 
 Размер | Высота, диаметр 
 
 **Абстрактный класс _Мясное_ (Наследник абстр. класса "Пища"):**
 
+
+
 Тип данных | Свойство
----------- |---------
-Список мяса разных животных | Тип мяса
+
+---------- | ---------
+
 Число | Массовая доля жира в продукте
+Число | Массовая доля продукта животного происхождения 
 
-**Абстрактный класс _Молочное_ (Наследник абстр. класса "Пища", Наследник интерфейса "Готово на обед"):**
+**Абстрактный класс _Молочное_ (Наследник абстр. класса "Пища", Наследник класса "Готово на обед"):**
 
 Тип данных | Свойство
----------- | --------
+---------- | ---------
 Список молока от разных животных | Тип молока
 Число | Массовая доля молочного жира в продукте
 
@@ -75,202 +76,119 @@
 Булевое | Можно выжать сок
 Булевое | Употребляется в сыром виде
 
-**Абстрактный класс _Крупа_ (Наследник абстр. класса "Пища"):**
+**Абстрактный класс _Выпечка_ (Наследник абстр. класса "Пища", класса "Готово на обед"):**
 
 Тип данных | Свойство
----------- | --------
-Число | Степень очищения(%)
-Перечисление | Тип (Целое, дробленое, молотое)
-
-
-**Абстрактный класс _Выпечка_ (Наследник абстр. класса "Пища", Наследник интерфейса "Готово на обед"):**
-
-Тип данных | Свойство
----------- | --------
+---------- |---------
 Список поднимающих веществ | Поднимающее вещество (при наличии)
 Булевое | Наличие начинки
 Строка | Тип муки
 
-**Абстрактный класс _Добавки_ (Наследник абстр. класса "Пища"):**
+**Абстрактный класс _Средство для очистки материалов_ (Наследник абстр. класса "Химия"):**
 
 Тип данных | Свойство
 ---------- |---------
-Строка | Агрегатное состояние
-
-
-**Абстрактный класс _Средство для очистки материалов_ (Наследник интерфейса "Химия"):**
-
-Тип данных | Свойство
----------- | --------
 Булевое | Разьедает кожу человека
 Температура | Максимально эфективная температура для использования
-
-
-**Абстрактный класс _Средство личной гигиены_ (Наследник абстр. класса "Химия"):**
-
-Тип данных | Свойство
----------- | --------
-Пол | Пол
-Булевое | На натуральной основе
-Булевое | Приносит вред или пользу здоровью
 
 
 **Абстрактный класс _Обувь (Наследник абстр. класса "Одежда"):**
 
 Тип данных | Свойство
----------- | --------
+---------- |---------
 Число | Высота голенищща/на длинну стельки
 Список материалов | Материал подошвы
-Длинна | Высота подошвы
+Число | Высота подошвы
+Булевое | Прошитая подошва
 
-
-**Абстрактный класс _Головной убор_ (Наследник абстр. класса "Одежда"):**
-
-Тип данных | Свойство
----------- | --------
-Длинна | Ширина козырька или полей (при наличии)
-Булевое | Наличие ушей
-Булевое | Наличие завязок на подбородке
-
-**Абстрактный класс _Одежда на плечи_ (Наследник Наследник абстр. класса "Одежда"):**
+**Абстрактный класс _Одежда на плечи (Наследник Наследник абстр. класса "Одежда"):**
 
 Тип данных | Свойство
----------- | --------
+---------- |---------
 Длинна | Длинна рукова/среднюю длинну руки (при наличии)
 Длинна | Длинна изделия/средний рост человека
 Перечисление | Тип горловины
 Булевое | Наличие капюшона
 
-**Абстрактный класс _Одежда на ноги_ (Наследник Наследник абстр. класса "Одежда"):**
+
+**Класс _Колбаса (Наследник абстр. класса "Мясное", Наследник интерфейса "Готово на обед")_:**
 
 Тип данных | Свойство
----------- | --------
-Длинна | Длинна изделия/ высота человека от пояса до пола
+---------- |---------
+Список соротов колбасы | Тип
 
-
-**Класс _Колбаса_ (Наследник абстр. класса "Мясное", интерфейса "Готово на обед"):**
-
-Тип данных | Свойство
----------- | --------
-Перечисление | Тип
-
-**Класс _Соленая рыба_ (Наследник абстр. класса "Мясное", итерфейса "Готово на обед", интерфейса "Товар на развес"):**
+**Класс _Соленая рыба (Наследник абстр. класса "Мясное", итерфейса "Готово на обед", интерфейса "Товар на развес")_:**
 
 Тип данных | Свойство
 ---------- |---------
 Число | Массовая доля соли 
 Булевое | Наличие несьедобных внутренностей
 
-**Класс _Мороженое_ (Наследник абстр. класса "Молочное"):**
+**Класс _Мороженое_ (Наследник абстр. класса "Молочное")_:**
 
 Тип данных | Свойство
----------- | --------
-Перечисление | Тип
+---------- |---------
+Список сортов мороженого | Тип
 Перечисление | Натуральные добавки (при наличии)
 
 
-**Класс _Цитрусовое_ (Наследник абстр. класса "Овощ-фрукт", интерфейса "Готово на обед", интерфейса "Товар на развес"):**
-
-Тип данных | Свойство
----------- | --------
-Булевое | Наличие косточки
-Перечисление | Толстошкурый-тонкошкурый
-Булевое | Чистый вид-смесь
-
-**Класс _Горох_ (Наследник абстр. класса "Крупа"):**
+**Класс _Цитрусовое_ (Наследник абстр. класса "Овощ-фрукт", класса "Готово на обед", класса "Товар на развес")_:**
 
 Тип данных | Свойство
 ---------- |---------
-Булевое | Спелый-молодой
-Булевое | Наличие стрючков
+Булевое | Наличие косточки
+Булевое | Толстошкурый-тонкошкурый
+Булевое | Чистый вид или смесь
 
-**Класс _Пирожок_ (Наследник абстр. класса "Выпечка"):**
+
+**Класс _Пирожок_ (Наследник абстр. класса "Выпечка")_:**
 
 Тип данных | Свойство
----------- | --------
-Перечисление | Тип начинки
+---------- |---------
+Строка | Тип начинки 
 Булевое | Открытый пирожок
-Перечисление | Тип приготовления
-
-**Класс _Какао_ (Наследник абстр. класса "Добавки"):**
-
-Тип данных | Свойство
----------- | --------
-Число | Массовая доля какао-масла
-Число | Массовая доля какао-порошка
 
 
-**Класс _Стиральный порошок_ (Наследник абстр. класса "Средство для очистки материалов"):**
+**Класс _Стиральный порошок_ (Наследник абстр. класса "Средство для очистки материалов")_:**
 
 Тип данных | Свойство
----------- | --------
+---------- |---------
 Число | Расход (масса порошка на 1 л воды)
 
-**Класс _Дедезерант_ (Наследник абстр. класса "Средство личной гигиены"):**
+
+**Класс _Сапоги_ (Наследник абстр. класса "Обувь")_:**
 
 Тип данных | Свойство
----------- | --------
-Булевое | Наличие дезинфицирующего вещества
-Перечесление | Тип (жидкий, двердый, другой)
+---------- |---------
 
-**Класс _Сапоги_ (Наследник абстр. класса "Обувь"):**
+**Класс _Шапка_ (Наследник абстр. класса "Головной убор")_:**
 
 Тип данных | Свойство
----------- | --------
+---------- |---------
 
-**Класс _Шапка_ (Наследник абстр. класса "Головной убор"):**
-
-Тип данных | Свойство
----------- | --------
-
-**Класс _Шуба_ (Наследник абстр. класса "Одежда на плечи"):**
+**Класс _Шуба_ (Наследник абстр. класса "Одежда на плечи")_:**
 
 Тип данных | Свойство
----------- | --------
+---------- |---------
 
-**Класс _Юбка_ (Наследник абстр. класса "Одежда на ноги"):**
-
-Тип данных | Свойство
----------- | --------
-
-**Класс _Кастрюля_ (Наследник абстр. класса "Посуда для готовка", наследник интерфейса "Товар со скидкой")_:**
+**Класс _Кастрюля_ (Наследник абстр. класса "Посуда для готовки")_:**
 
 Тип данных | Свойство
----------- | --------
+---------- |---------
 
-**Класс _Чашка_ (Наследник абстр. класса "Посуда для обеда"):**
 
+**Дополнительынй Класс _Готово на обед_:**
 Тип данных | Свойство
----------- | --------
-Перечисление | Тип 
-
-
-
-**Дополнительынй Интерфейс _Товар со скидкой_:**
-
-Тип данных | Свойство
----------- | --------
-Время | Срок действия скидки
-Дата | Дата начала скидки
-Число | Процентная доля скидки от первоначальной цены
-
-
-**Дополнительынй Интерфейс _Готово на обед_:**
-
-Тип данных | Свойство
----------- | --------
+---------- |---------
 Цена | Разница в цене между готовым товаром и приготовленным самостоятельно из купленых ингридиентов
 
-
-**Дополнительынй Интерфейс _Кожаное изделие_:**
-
+**Дополнительынй Класс _Кожаное изделие_:**
 Тип данных | Свойство
 ---------- |---------
 Перечисление | Тип кожи
-Булевое | Наличие меха на коже
+Булевое | Наличие наурального меха 
 
-**Дополнительынй Интерфейс _Товар на развес_:**
-
+**Дополнительынй Класс _Товар на развес_:**
 Тип данных | Свойство
 ---------- |---------
 
@@ -289,7 +207,7 @@
 Метод взвесить должен определять массу товара положенного в корзину.
 
 
-**Объект _Колбаса1_ (наследник класса "Колбаса", интерфейса "Товар со скидкой", интерфейса "Готово на обед"):**
+**Объект _Колбаса1 (наследник класса "Колбаса", интерфейса "Товар со скидкой", интерфейса "Готово на обед")_:**
 
 Тип данных | Свойство
 ---------- |---------
@@ -306,12 +224,9 @@
 Свинина, говядина | Тип мяса
 30% | Массовая доля жира в продукте
 Копченая | Тип
-7 дней | Срок действия скидки
-20.02.2018 | Дата начала скидки
-5% | Процентная доля скидки от превоначальной цены
-?? | Разница в цене между готовым товаром и приготовленным самостоятельно из купленых ингридиентов
 
-**Объект _Селедь1_ (наследник класса "Соленая рыба", интерфейса "Готово на обед"):**
+
+**Объект _Селедь (наследник класса "Соленая рыба", интерфейса "Готово на обед")_:**
 
 Тип данных | Свойство
 ---------- |---------
@@ -327,9 +242,8 @@
 Да | Наличие консервантов
 9% | Массовая доля соли 
 Да | Наличие несьедобных внутренностей
-10 грн/кг | Разница в цене между готовым товаром и приготовленным самостоятельно из купленых ингридиентов
 
-**Объект _Каштан1_ (наследник класса "Молочное"):**
+**Объект _Каштан1 (наследник класса "Молочное")_:**
 
 Тип данных | Свойство
 ---------- |---------
@@ -341,30 +255,20 @@
 1 | Марка (при наличии)
 2070 ккал/кг | Калорийность
 Молоко коровье, сливочное масло, какао порошок, орех грецкий, сахар, молоко сгущенное, вода питьевая, молоко сухое, эмульгатор, стабилизаторы, ванилин | Состав
--5*С | Надлежащая температура сохранения
-Да | Наличие консервантов
 Коровье | Тип молока
 14% | Массовая доля молочного жира в продукте
 На палочке | тип
 Какао, орехи | Натуральные добавки (при наличии)
-?? | Разница в цене между готовым товаром и приготовленным самостоятельно из купленых ингридиентов
 
 **Объект _Лимон1 (наследник класса "Цитрусовое")_:**
 
-**Объект _Горох1 (наследник класса "Горох")_:**
-
 **Объект _Пирожок1 (наследник класса "Пирожок")_:**
-
-**Объект _Какао1 (наследник класса "Какао")_:**
 
 **Объект _Стиральный порошок1 (наследник класса "Стиральный порошок")_:**
 
-**Объект _Дедецерант1 (наследник класса "Дедезерант")_:**
+**Объект _Сапоги1 (наследник класса "Сапоги", класса "Кожаное изделие")_:**
 
-**Объект _Сапоги1 (наследник класса "Сапоги", интерфейса "Кожаные изделия")_:**
-
-**Объект _Шуба1 (наследник класса "Шуба", интерфейса "Кожаные изделия")_:**
+**Объект _Шуба1 (наследник класса "шуба", класса "Кожаное изделие")_:**
 
 **Объект _Кастрюля1 (наследник класса "Кастрюля")_:**
 
-**Объект _Чашка1 (наследник класса "Чашка")_:**
