--- a/Описание дерева_Товар.md
+++ b/Описание дерева_Товар.md
@@ -1,5 +1,5 @@
 
-![Диаграмма к дереву](https://user-images.githubusercontent.com/36535012/36641682-9451c14a-1a3c-11e8-89b1-b32082dea98b.png)
+![Диаграмма к цепи Товар](https://user-images.githubusercontent.com/36535012/36776564-edba9818-1c6e-11e8-82da-6157d2eed8d2.png)
 
 **Интерфейс _Товар_:**
 
@@ -38,15 +38,16 @@
 Список материалов | Материал верха
 Булевое | Наличие подклада
 Список материалов | Материал подклада (при наличии)
-Список застежек | Застежка (при наличии)
+Справочник | Застежка (при наличии)
+Массив | Соответствие номера размера физическим размерам 
 
 **Абстрактрый класс _Посуда_ (наследник интефейса "Товар"):**
 
 Тип данных | Свойство
 ---------- |---------
-Список материалов | Основной материал
-Строка | Тип покрытия (при наличии)
-Масса | Масса на внутренний обьем
+Справочник | Основной материал
+Справочник | Тип покрытия (при наличии)
+Число | Масса на внутренний обьем
 Размер | Высота, диаметр 
 
 **Абстрактный класс _Мясное_ (Наследник абстр. класса "Пища"):**
@@ -56,7 +57,7 @@
 Число | Массовая доля жира в продукте
 Число | Массовая доля продукта животного происхождения 
 
-**Абстрактный класс _Молочное_ (Наследник абстр. класса "Пища", Наследник класса "Готово на обед"):**
+**Абстрактный класс _Молочное_ (Наследник абстр. класса "Пища", интерфейса "Готово на обед"):**
 
 Тип данных | Свойство
 ---------- | ---------
@@ -72,13 +73,13 @@
 Булевое | Можно выжать сок
 Булевое | Употребляется в сыром виде
 
-**Абстрактный класс _Выпечка_ (Наследник абстр. класса "Пища", класса "Готово на обед"):**
+**Абстрактный класс _Выпечка_ (Наследник абстр. класса "Пища", интерфейса "Готово на обед"):**
 
 Тип данных | Свойство
 ---------- |---------
-Список поднимающих веществ | Поднимающее вещество (при наличии)
+Српавочник | Поднимающее вещество (при наличии)
 Булевое | Наличие начинки
-Строка | Тип муки
+Справочник | Тип муки
 
 **Абстрактный класс _Средство для очистки материалов_ (Наследник абстр. класса "Химия"):**
 
@@ -88,7 +89,7 @@
 Температура | Максимально эфективная температура для использования
 
 
-**Абстрактный класс _Обувь (Наследник абстр. класса "Одежда"):**
+**Абстрактный класс _Обувь_ (Наследник абстр. класса "Одежда"):**
 
 Тип данных | Свойство
 ---------- |---------
@@ -97,21 +98,20 @@
 Число | Высота подошвы
 Булевое | Прошитая подошва
 
-**Абстрактный класс _Одежда на плечи (Наследник Наследник абстр. класса "Одежда"):**
+**Абстрактный класс _Одежда на плечи_ (Наследник Наследник абстр. класса "Одежда"):**
 
 Тип данных | Свойство
 ---------- |---------
-Длинна | Длинна рукова/среднюю длинну руки (при наличии)
-Длинна | Длинна изделия/средний рост человека
-Перечисление | Тип горловины
+Справочник | Тип рукова
+Сравочник | Тип горловины
 Булевое | Наличие капюшона
 
 
-**Класс _Колбаса (Наследник абстр. класса "Мясное", Наследник интерфейса "Готово на обед")_:**
+**Класс _Колбаса (Наследник абстр. класса "Мясное", интерфейса "Готово на обед")_:**
 
 Тип данных | Свойство
 ---------- |---------
-Список соротов колбасы | Тип
+Справочник | Тип
 
 **Класс _Соленая рыба (Наследник абстр. класса "Мясное", итерфейса "Готово на обед", интерфейса "Товар на развес")_:**
 
@@ -124,11 +124,11 @@
 
 Тип данных | Свойство
 ---------- |---------
-Список сортов мороженого | Тип
-Перечисление | Натуральные добавки (при наличии)
+Справочник | Тип
+Справочник | Натуральные добавки (при наличии)
 
 
-**Класс _Цитрусовое_ (Наследник абстр. класса "Овощ-фрукт", класса "Готово на обед", класса "Товар на развес")_:**
+**Класс _Цитрусовое_ (Наследник абстр. класса "Овощ-фрукт", интерфейса "Готово на обед", интерфейса "Товар на развес")_:**
 
 Тип данных | Свойство
 ---------- |---------
@@ -178,37 +178,39 @@
 
 Тип данных | Свойство
 ---------- | ---------
-Цена | Разница в цене между готовым товаром и приготовленным самостоятельно из купленых ингридиентов
-
-**Дополнительынй Класс _Кожаное изделие_:**
-
-Тип данных | Свойство
----------- | ---------
-Перечисление | Тип кожи
-Булевое | Наличие наурального меха 
+Список ингридиентов | Состав
+Строка | Противопоказания
+Диапазон температуры | Температура для употребления
+Массив | Массовая доля билков, жиров, углеводов, воды
+Число | Калорийность
 
 **Дополнительынй Класс _Товар на развес_:**
 
 Тип данных | Свойство
 ---------- | ---------
-
+Масса | Минимальная продаваемая масса
+Масса | Минимальный шаг в массе для покупки данного продукта
 
 
 **Дополнительный класс _Покупатель**
+
+Тип данных | Свойство
+---------- | --------
+Назвнание, тип количества, количество | Корзина
+Число, денежная единица | Кошелек
 
 Метод | Параметры | Возвращаемый тип
 ----- | --------- | ----------------
 Купить | Интерфейс _Товар_, количество(штуки, литры, килограммы, другое) | Стоимость
 Сьесть | Интерфейс _Готово на обед_ | Нету
 Померять | Абстрактный класс _Одежда_ | Булевое
-Взвесить | Интерфейс _Товар на развес_ | Масса
+Набрать | Интерфейс _Товар_, количество 
 
 Метод купить должен возвращать затраченую сумму денег на покпуку. 
 
 Метод померять должен определять подходит вещь или нет, то есть возвращать булевое значение да или нет. 
 
-Метод взвесить должен определять массу товара положенного в корзину. 
-
+Метод набрать должен дабавлять в корзину набранный товар. 
 
 
 
