--- a/Описание дерева_Товар.md
+++ b/Описание дерева_Товар.md
@@ -1,5 +1,5 @@
 
-![Диаграмма к цепи Товар](https://user-images.githubusercontent.com/36535012/36776564-edba9818-1c6e-11e8-82da-6157d2eed8d2.png)
+![Диаграмма цепи товар](https://user-images.githubusercontent.com/36535012/36776993-657f87e0-1c70-11e8-9541-3e6d4314bab3.png)
 
 **Интерфейс _Товар_:**
 
